--- a/static/viewer.html
+++ b/static/viewer.html
@@ -89,6 +89,7 @@
     <div id="pdf-container">
         <div id="pdf-viewer"></div>
     </div>
+    <div id="pdf-metadata">{{meta_data|safe}}</div>
 
     <script>
         pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
